--- a/src/main/resources/apiTestResource.properties
+++ b/src/main/resources/apiTestResource.properties
@@ -1,3 +1,4 @@
 username=shinkynambiar@ta.com
 password=divya@123
 baseURI=https://us-central1-qa01-tekarch-accmanager.cloudfunctions.net
+basePath=/login
